--- a/choqok_netease.desktop
+++ b/choqok_netease.desktop
@@ -15,4 +15,5 @@ X-KDE-PluginInfo-Depends=
 X-KDE-PluginInfo-License=GPL
 X-KDE-PluginInfo-EnabledByDefault=false
 Name=Netease
+Name[zh_CN]=网易
 Comment=t.163.com Service
